Added ninth contest archive files.
Reformatted excess whitespaces in html tags.

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
    "http://www.w3.org/TR/html4/loose.dtd">
-<html lang = "en">
+<html lang="en">
    <head>
-      <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8">
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>Home Page</title>
-      <link href = "StyleSheet.css" rel = "StyleSheet" type = "text/css">
+      <link href="StyleSheet.css" rel="StyleSheet" type="text/css">
    </head>
 
    <body>
-      <img src = "images/ROS.png" alt = "ReactOS Icon" align = "left" height = "75" width = "75" hspace = "10">
+      <img src="images/ROS.png" alt="ReactOS Icon" align="left" height="75" width="75" hspace="10">
       <h1>&nbsp;ReactOS Testing Contest</h1>
       <h2>&nbsp;Home Page</h2>
 
       <!-- Add a separator -->
-      <hr style = "border-width: 3px">
+      <hr style="border-width: 3px">
       <br>
 
       <h1>&nbsp;What is a testing contest?</h1>
@@ -27,7 +27,7 @@
       </p>
 
       <p>
-         To view the leaderboard of contest participants, please check the <a href = "leaderboard.html">Leaderboard</a> page.
+         To view the leaderboard of contest participants, please check the <a href="leaderboard.html">Leaderboard</a> page.
       </p>
 
       <h1>&nbsp;<u>Contest Pages</u></h1>
@@ -38,27 +38,31 @@
 
       <ul>
          <li>
-            <a href = "third.html">3rd Testing Contest</a>
+            <a href="third.html">3rd Testing Contest</a>
          </li>
 
          <li>
-            <a href = "fourth.html">4th Testing Contest</a>
+            <a href="fourth.html">4th Testing Contest</a>
          </li>
          
          <li>
-            <a href = "fifth.html">5th Testing Contest</a>
+            <a href="fifth.html">5th Testing Contest</a>
          </li>
 
          <li>
-            <a href = "sixth.html">6th Testing Contest</a>
+            <a href="sixth.html">6th Testing Contest</a>
          </li>
 
          <li>
-            <a href = "seventh.html">7th Testing Contest</a>
+            <a href="seventh.html">7th Testing Contest</a>
          </li>
 
          <li>
-            <a href = "eighth.html">8th Testing Contest</a>
+            <a href="eighth.html">8th Testing Contest</a>
+         </li>
+
+         <li>
+            <a href="ninth.html">9th Testing Contest</a>
          </li>
       </ul>
    </body>
