--- a/leaderboard.html
+++ b/leaderboard.html
@@ -4,21 +4,21 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
    "http://www.w3.org/TR/html4/loose.dtd">
-<html lang = "en">
+<html lang="en">
    <head>
-      <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8">
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>Leaderboard</title>
-      <link href = "StyleSheet.css" rel = "StyleSheet" type = "text/css">
+      <link href="StyleSheet.css" rel="StyleSheet" type="text/css">
    </head>
 
    <body>
-      <img src = "images/ROS.png" alt = "ReactOS Icon" align = "left" height = "100" width = "120" hspace = "10">
+      <img src="images/ROS.png" alt="ReactOS Icon" align="left" height="100" width="120" hspace="10">
       <h1>&nbsp;ReactOS Testing Contest</h1>
       <h2>&nbsp;Leaderboard</h2>
-      <h4>&nbsp;<a href = "index.html"><< Go Back</a></h4>
+      <h4>&nbsp;<a href="index.html">&lt;&lt; Go Back</a></h4>
 
       <!-- Add a separator -->
-      <hr style = "border-width: 3px">
+      <hr style="border-width: 3px">
       <br>
 
       <p>
@@ -28,7 +28,7 @@
       <table>
          <!-- Main board frame -->
          <tr>
-            <th>Nickname (Discord ID)</th>
+            <th>Nickname (Discord or Matrix ID)</th>
             <th>Contests won</th>
             <th>Number of tests</th>
             <th>Number of contests participated</th>
@@ -43,7 +43,28 @@
          </tr>
 
          <tr>
-            <td>BieHDC (224950895572549632)</td>
+            <td>BieHDC (224950895572549632 formerly, @biehdc:reactos.org on Matrix)</td>
+            <td>1</td>
+            <td>2</td>
+            <td>2</td>
+         </tr>
+
+         <tr>
+            <td>winterhell (180798519785947136)</td>
+            <td>N/A</td>
+            <td>7</td>
+            <td>2</td>
+         </tr>
+
+         <tr>
+            <td>Zero Senki (346048962391703553)</td>
+            <td>N/A</td>
+            <td>3</td>
+            <td>1</td>
+         </tr>
+
+         <tr>
+            <td>Helmet Appleseed (222441412233396224)</td>
             <td>N/A</td>
             <td>1</td>
             <td>1</td>
@@ -53,13 +74,6 @@
             <td>bre.haviours (422004929956413451)</td>
             <td>N/A</td>
             <td>1</td>
-            <td>1</td>
-         </tr>
-
-         <tr>
-            <td>winterhell (180798519785947136)</td>
-            <td>N/A</td>
-            <td>4</td>
             <td>1</td>
          </tr>
       </table>
