--- a/seventh.html
+++ b/seventh.html
@@ -4,27 +4,27 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
    "http://www.w3.org/TR/html4/loose.dtd">
-<html lang = "en">
+<html lang="en">
    <head>
-      <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8">
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>ReactOS Community - 7th Testing Contest</title>
-      <link href = "StyleSheet.css" rel = "StyleSheet" type = "text/css">
+      <link href="StyleSheet.css" rel="StyleSheet" type="text/css">
    </head>
 
    <body>
-      <img src = "images/ROS.png" alt = "ReactOS Icon" align = "left" height = "120" width = "120" hspace = "10">
+      <img src="images/ROS.png" alt="ReactOS Icon" align="left" height="120" width="120" hspace="10">
       <h1>&nbsp;ReactOS Community</h1>
       <h2>&nbsp;7th Testing Contest</h2>
       <h4><i>&nbsp;4 tests in total made by 4 candidates</i></h4>
-      <h4>&nbsp;<a href = "index.html"><< Go Back</a></h4>
+      <h4>&nbsp;<a href="index.html">&lt;&lt; Go Back</a></h4>
 
       <!-- Add a separator -->
-      <hr style = "border-width: 3px">
+      <hr style="border-width: 3px">
 
       <h1>&nbsp;<u>Submissions</u></h1>
 
       <!-- Users' posts -->
-      <div id = "winner">
+      <div id="winner">
          <!-- Post details -->
          <h3>&nbsp;&nbsp;<b>Username: healLV (Contest Winner)</b></h3>
          <h3>&nbsp;&nbsp;<b>User ID: 120622544989585408</b></h3>
@@ -34,7 +34,7 @@
          <p>
             Tux Paint on real machine with a drawing pad
          </p>
-         <iframe src = "https://www.youtube.com/embed/wRMp0dg7ZlQ" width = "450" height = "315"></iframe>
+         <iframe src="https://www.youtube.com/embed/wRMp0dg7ZlQ" width="450" height="315"></iframe>
       </div>
 
       <!-- Add a separator -->
@@ -50,7 +50,7 @@
          <p>
             Demul 0.56 Dreamcast emulator
          </p>
-         <iframe src = "https://www.youtube.com/embed/ySJE93Eqs8A" width = "450" height = "315"></iframe>
+         <iframe src="https://www.youtube.com/embed/ySJE93Eqs8A" width="450" height="315"></iframe>
       </div>
 
       <!-- Add a separator -->
@@ -66,7 +66,7 @@
          <p>
             icoFX 1.6.4 (click image to enlarge)
          </p>
-         <a href = "images/seventh/icofx.png" ><img src = "images/seventh/icofx.png" alt = "icoFX" height = "300" width = "550" hspace = "25"></a>
+         <a href="images/seventh/icofx.png" ><img src="images/seventh/icofx.png" alt="icoFX" height="300" width="550" hspace="25"></a>
          <br>
          <p>
            Can load, edit and save icons without issues-
@@ -76,7 +76,7 @@
       <!-- Add a separator -->
       <hr>
 
-      <div id = "disqualified">
+      <div id="disqualified">
          <!-- Post details -->
          <h3>&nbsp;&nbsp;<b>Username: polik</b></h3>
          <h3>&nbsp;&nbsp;<b>User ID: 407913558551166976</b></h3>
@@ -84,7 +84,7 @@
 
          <br>
          <p>
-            Need for Speed Underground 2 - <font color = "#ff0000">DISQUALIFIED:</font> Software was tested long ago on the community channel.
+            Need for Speed Underground 2 - <font color="#ff0000">DISQUALIFIED:</font> Software was tested long ago on the community channel.
          </p>
          <p>
             Couldn't get sound to work. Strange glitch, when the game is started in low graphics preset and when high preset is selected it becomes unplayable (very slow). When I start the game with high preset the gameplay is surprisingly smooth.
@@ -119,7 +119,7 @@
             <strong>Carlos S. M. -- </strong> Got <strong>1</strong> vote from: BieHDC.
          </li>
          <li>
-            <strong>polik <font color = "#ff0000">(DQ)</font> -- </strong> Got <strong>1</strong> vote from: winterhell.
+            <strong>polik <font color="#ff0000">(DQ)</font> -- </strong> Got <strong>1</strong> vote from: winterhell.
          </li>
          <li>
             <strong>thetechdog -- </strong> Got <strong>1</strong> vote from: Zero3K.
