--- a/sixth.html
+++ b/sixth.html
@@ -4,22 +4,22 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
    "http://www.w3.org/TR/html4/loose.dtd">
-<html lang = "en">
+<html lang="en">
    <head>
-      <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8">
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>ReactOS Community - 6th Testing Contest</title>
-      <link href = "StyleSheet.css" rel = "StyleSheet" type = "text/css">
+      <link href="StyleSheet.css" rel="StyleSheet" type="text/css">
    </head>
 
    <body>
-      <img src = "images/ROS.png" alt = "ReactOS Icon" align = "left" height = "120" width = "120" hspace = "10">
+      <img src="images/ROS.png" alt="ReactOS Icon" align="left" height="120" width="120" hspace="10">
       <h1>&nbsp;ReactOS Community</h1>
       <h2>&nbsp;6th Testing Contest</h2>
       <h4><i>&nbsp;5 tests in total made by 4 candidates</i></h4>
-      <h4>&nbsp;<a href = "index.html"><< Go Back</a></h4>
+      <h4>&nbsp;<a href="index.html">&lt;&lt; Go Back</a></h4>
 
       <!-- Add a separator -->
-      <hr style = "border-width: 3px">
+      <hr style="border-width: 3px">
 
       <h1>&nbsp;<u>Submissions</u></h1>
 
@@ -34,7 +34,7 @@
          <p>
             Pro Motion 6.5
          </p>
-         <img src = "images/sixth/pro-motion.png" alt = "Pro Motion" height = "450" width = "490" hspace = "25">
+         <img src="images/sixth/pro-motion.png" alt="Pro Motion" height="450" width="490" hspace="25">
       </div>
 
       <!-- Add a separator -->
@@ -50,7 +50,7 @@
          <p>
             Qemu Manager 7.0
          </p>
-         <img src = "images/sixth/qemu-manager.png" alt = "Qemu Manager" height = "500" width = "650" hspace = "25">
+         <img src="images/sixth/qemu-manager.png" alt="Qemu Manager" height="500" width="650" hspace="25">
       </div>
 
       <!-- Add a separator -->
@@ -66,7 +66,7 @@
          <p>
             ChromEd 2.10.0.1
          </p>
-         <img src = "images/sixth/ChromEd.png" alt = "ChromEd" height = "500" width = "650" hspace = "25">
+         <img src="images/sixth/ChromEd.png" alt="ChromEd" height="500" width="650" hspace="25">
          <br>
          <p>
             Some dialogs are slow, running on Mesa3D + SwiftShader
@@ -86,9 +86,9 @@
          <p>
             NFS ProStreet demo
          </p>
-         <img src = "images/sixth/nfs-prostreet.png" alt = "Need for Speed Pro Street" height = "450" width = "450" hspace = "25">
+         <img src="images/sixth/nfs-prostreet.png" alt="Need for Speed Pro Street" height="450" width="450" hspace="25">
          <br>
-         <img src = "images/sixth/nfs-prostreet2.png" alt = "Need for Speed Pro Street (2nd image)" height = "450" width = "450" hspace = "25">
+         <img src="images/sixth/nfs-prostreet2.png" alt="Need for Speed Pro Street (2nd image)" height="450" width="450" hspace="25">
          <br>
          <p>
             Sound is choppy and the performance is pretty bad even with 3D acceleration
@@ -112,7 +112,7 @@
          <p>
             gretl 1.9.3
          </p>
-         <img src = "images/sixth/gretl.png" alt = "Gretl 1.9.3" height = "500" width = "650" hspace = "25">
+         <img src="images/sixth/gretl.png" alt="Gretl 1.9.3" height="500" width="650" hspace="25">
       </div>
 
       <!-- Add a separator -->
