--- a/third.html
+++ b/third.html
@@ -4,27 +4,27 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
    "http://www.w3.org/TR/html4/loose.dtd">
-<html lang = "en">
+<html lang="en">
    <head>
-      <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8">
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>ReactOS Community - 3rd Testing Contest</title>
-      <link href = "StyleSheet.css" rel = "StyleSheet" type = "text/css">
+      <link href="StyleSheet.css" rel="StyleSheet" type="text/css">
    </head>
 
    <body>
-      <img src = "images/ROS.png" alt = "ReactOS Icon" align = "left" height = "120" width = "120" hspace = "10">
+      <img src="images/ROS.png" alt="ReactOS Icon" align="left" height="120" width="120" hspace="10">
       <h1>&nbsp;ReactOS Community</h1>
       <h2>&nbsp;3rd Testing Contest</h2>
       <h4><i>&nbsp;12 tests in total made by 4 candidates</i></h4>
-      <h4>&nbsp;<a href = "index.html"><< Go Back</a></h4>
+      <h4>&nbsp;<a href="index.html">&lt;&lt; Go Back</a></h4>
 
       <!-- Add a separator -->
-      <hr style = "border-width: 3px">
+      <hr style="border-width: 3px">
 
       <h1>&nbsp;<u>Submissions</u></h1>
 
       <!-- Users' posts -->
-      <div id = "winner">
+      <div id="winner">
          <!-- Post details -->
          <h3>&nbsp;&nbsp;<b>Username: Illen (Contest Winner)</b></h3>
          <h3>&nbsp;&nbsp;<b>User ID: 376659409306386434</b></h3>
@@ -36,7 +36,7 @@
             <br>
             And sound also is working.
          </p>
-         <iframe src = "https://youtube.com/embed/9NXkoOrplRk" width = "450" height = "315"></iframe>
+         <iframe src="https://youtube.com/embed/9NXkoOrplRk" width="450" height="315"></iframe>
 
          <!-- Add a separator -->
          <hr>
@@ -48,7 +48,7 @@
             <br>
             Sound is not working.
          </p>
-         <a href = "images/third/openmw.png"><img src = "images/third/openmw.png" alt = "OpenMW" height = "300" width = "450" hspace = "25"></a>
+         <a href="images/third/openmw.png"><img src="images/third/openmw.png" alt="OpenMW" height="300" width="450" hspace="25"></a>
 
          <!-- Add a separator -->
          <hr>
@@ -56,7 +56,7 @@
 
          <br>
          <p>QEMU Version 20160903 works with networking, sound was not tested, needs a -display sdl flag in order to display the screen properly.</p>
-         <a href = "images/third/qemu.png"><img src = "images/third/qemu.png" alt = "QEMU" height = "300" width = "450" hspace = "25"></a>
+         <a href="images/third/qemu.png"><img src="images/third/qemu.png" alt="QEMU" height="300" width="450" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -72,7 +72,7 @@
          <p>
             LeoCAD 18.01
          </p>
-         <a href = "images/third/leocad.png"><img src = "images/third/leocad.png" alt = "LeoCAD" height = "350" width = "450" hspace = "25"></a>
+         <a href="images/third/leocad.png"><img src="images/third/leocad.png" alt="LeoCAD" height="350" width="450" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -90,7 +90,7 @@
             <br>
             With 3D acceleration
          </p>
-         <a href = "images/third/qcad.png"><img src = "images/third/qcad.png" alt = "QCAD" height = "350" width = "450" hspace = "25"></a>
+         <a href="images/third/qcad.png"><img src="images/third/qcad.png" alt="QCAD" height="350" width="450" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -110,7 +110,7 @@
             <br>
             bugs: the subwindows dont get an entry in the taskbar (so switching between them is not as nice, but its not a blocker at all)
          </p>
-         <a href = "images/third/cheatengine.png"><img src = "images/third/cheatengine.png" alt = "Cheat Engine" height = "400" width = "500" hspace = "25"></a>
+         <a href="images/third/cheatengine.png"><img src="images/third/cheatengine.png" alt="Cheat Engine" height="400" width="500" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -128,7 +128,7 @@
             <br>
             has a bit weirdlish fonts in some sections, but it is readable
          </p>
-         <a href = "images/third/ollydbg2.png"><img src = "images/third/ollydbg2.png" alt = "OllyDbg2" height = "400" width = "500" hspace = "25"></a>
+         <a href="images/third/ollydbg2.png"><img src="images/third/ollydbg2.png" alt="OllyDbg2" height="400" width="500" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -146,7 +146,7 @@
             <br>
             Sound does not work.
          </p>
-         <iframe src = "https://youtube.com/embed/3Lmm2DUfx2M" width = "450" height = "315"></iframe>
+         <iframe src="https://youtube.com/embed/3Lmm2DUfx2M" width="450" height="315"></iframe>
       </div>
 
       <!-- Add a separator -->
@@ -165,7 +165,7 @@
             <br>
             bonus: notice how for the "msi" file type it says "reactos installer package" 
          </p>
-         <a href = "images/third/windirstat.png"><img src = "images/third/windirstat.png" alt = "WinDirStat" height = "400" width = "560" hspace = "25"></a>
+         <a href="images/third/windirstat.png"><img src="images/third/windirstat.png" alt="WinDirStat" height="400" width="560" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -181,7 +181,7 @@
          <p>
             Jdownloader is working as intended
          </p>
-         <a href = "https://i.imgur.com/4zh8EUb.png"><img src = "https://i.imgur.com/4zh8EUb.png" alt = "Jdownloader" height = "350" width = "550" hspace = "25"></a>
+         <a href="https://i.imgur.com/4zh8EUb.png"><img src="https://i.imgur.com/4zh8EUb.png" alt="Jdownloader" height="350" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -195,7 +195,7 @@
 
          <br>
          <p>
-            <a href = "https://bionus.github.io/imgbrd-grabber/">https://bionus.github.io/imgbrd-grabber/</a>
+            <a href="https://bionus.github.io/imgbrd-grabber/">https://bionus.github.io/imgbrd-grabber/</a>
             <br>
             Says it failed to start because it's missing a DLL but it opens and works regardless. (weird)
             <br>
@@ -203,11 +203,11 @@
             <br>
             QT themes also work properly.
          </p>
-         <a href = "https://i.imgur.com/E6tqzxd.jpg"><img src = "https://i.imgur.com/E6tqzxd.jpg" alt = "Imgbrd-Grabber" height = "350" width = "550" hspace = "25"></a>
+         <a href="https://i.imgur.com/E6tqzxd.jpg"><img src="https://i.imgur.com/E6tqzxd.jpg" alt="Imgbrd-Grabber" height="350" width="550" hspace="25"></a>
          <br>
-         <a href = "https://i.imgur.com/BbVeg1I.png"><img src = "https://i.imgur.com/BbVeg1I.png" alt = "Imgbrd-Grabber" height = "350" width = "550" hspace = "25"></a>
+         <a href="https://i.imgur.com/BbVeg1I.png"><img src="https://i.imgur.com/BbVeg1I.png" alt="Imgbrd-Grabber" height="350" width="550" hspace="25"></a>
          <br>
-         <a href = "https://i.imgur.com/5T8IeCZ.png"><img src = "https://i.imgur.com/5T8IeCZ.png" alt = "Imgbrd-Grabber" height = "350" width = "550" hspace = "25"></a>
+         <a href="https://i.imgur.com/5T8IeCZ.png"><img src="https://i.imgur.com/5T8IeCZ.png" alt="Imgbrd-Grabber" height="350" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -223,7 +223,7 @@
          <p>
             WMP 6.0 in ROS, can't test sound.
          </p>
-         <a href = "images/third/wmp.jpg"><img src = "images/third/wmp.jpg" alt = "wmp" height = "450" width = "350" hspace = "25"></a>
+         <a href="images/third/wmp.jpg"><img src="images/third/wmp.jpg" alt="wmp" height="450" width="350" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
