--- a/eighth.html
+++ b/eighth.html
@@ -4,22 +4,22 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
    "http://www.w3.org/TR/html4/loose.dtd">
-<html lang = "en">
+<html lang="en">
    <head>
-      <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8">
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>ReactOS Community - 8th Testing Contest</title>
-      <link href = "StyleSheet.css" rel = "StyleSheet" type = "text/css">
+      <link href="StyleSheet.css" rel="StyleSheet" type="text/css">
    </head>
 
    <body>
-      <img src = "images/ROS.png" alt = "ReactOS Icon" align = "left" height = "120" width = "120" hspace = "10">
+      <img src="images/ROS.png" alt="ReactOS Icon" align="left" height="120" width="120" hspace="10">
       <h1>&nbsp;ReactOS Community</h1>
       <h2>&nbsp;8th Testing Contest</h2>
       <h4><i>&nbsp;7 tests in total made by 4 candidates</i></h4>
-      <h4>&nbsp;<a href = "index.html"><< Go Back</a></h4>
+      <h4>&nbsp;<a href="index.html">&lt;&lt; Go Back</a></h4>
 
       <!-- Add a separator -->
-      <hr style = "border-width: 3px">
+      <hr style="border-width: 3px">
 
       <h1>&nbsp;<u>Submissions</u></h1>
 
@@ -43,7 +43,7 @@
             I have tested the default functionality which includes searching through the binary for various things, debugging, changing opcode and a few more. I didnt do a "full suite test", but everything that 90% of users would use works just fine.
             It has a bit of weird window handling randomly, but that doesnt block functionality.
          </p>
-         <a href = "images/eighth/ida5final.png" ><img src = "images/eighth/ida5final.png" alt = "IDA5" height = "300" width = "550" hspace = "25"></a>
+         <a href="images/eighth/ida5final.png" ><img src="images/eighth/ida5final.png" alt="IDA5" height="300" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -61,13 +61,13 @@
             Plays fullspeed.
             No audio due to lack of XAudio and has trouble going fullscreen.
          </p>
-         <a href = "images/eighth/castle.png" ><img src = "images/eighth/castle.png" alt = "Castle-Crashers" height = "300" width = "550" hspace = "25"></a>
+         <a href="images/eighth/castle.png" ><img src="images/eighth/castle.png" alt="Castle-Crashers" height="300" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
       <hr>
 
-      <div id = "winner">
+      <div id="winner">
          <!-- Post details -->
          <h3>&nbsp;&nbsp;<b>Username: ecksdii</b></h3>
          <h3>&nbsp;&nbsp;<b>User ID: 361477422203273216</b></h3>
@@ -78,11 +78,11 @@
             Portal(latest Steam version) works and runs pretty well.
             Fonts for VGUI seem to be missing, but the game runs at decent framerate and fullscreen works out of the box.
          </p>
-         <a href = "images/eighth/portal.png" ><img src = "images/eighth/portal.png" alt = "Portal" height = "300" width = "550" hspace = "25"></a>
+         <a href="images/eighth/portal.png" ><img src="images/eighth/portal.png" alt="Portal" height="300" width="550" hspace="25"></a>
          <p>
             Also it does have graphical bugs when the game renders portals.
          </p>
-         <a href = "images/eighth/portal-2.png" ><img src = "images/eighth/portal-2.png" alt = "Portal" height = "300" width = "550" hspace = "25"></a>
+         <a href="images/eighth/portal-2.png" ><img src="images/eighth/portal-2.png" alt="Portal" height="300" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -98,7 +98,7 @@
          <p>
             skinbuilder v3.3.1 by skincrafter. this program is work, but leak of MM.
          </p>
-         <a href = "images/eighth/skinbuilder.png" ><img src = "images/eighth/skinbuilder.png" alt = "SkinBuilder" height = "300" width = "550" hspace = "25"></a>
+         <a href="images/eighth/skinbuilder.png" ><img src="images/eighth/skinbuilder.png" alt="SkinBuilder" height="300" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -115,7 +115,7 @@
             Photoshop CS2 installs and runs well(requires unicows.dll)
             Photoshop CS4 runs but is a bit unstable
          </p>
-         <a href = "images/eighth/photoshop.png" ><img src = "images/eighth/photoshop.png" alt = "SkinBuilder" height = "300" width = "550" hspace = "25"></a>
+         <a href="images/eighth/photoshop.png" ><img src="images/eighth/photoshop.png" alt="SkinBuilder" height="300" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -131,7 +131,7 @@
          <p>
             Kega Fusion works perfectly, audio, video, fullspeed
          </p>
-         <a href = "images/eighth/kega-fusion.png" ><img src = "images/eighth/kega-fusion.png" alt = "Kega-Fusion" height = "300" width = "550" hspace = "25"></a>
+         <a href="images/eighth/kega-fusion.png" ><img src="images/eighth/kega-fusion.png" alt="Kega-Fusion" height="300" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
