--- a/fifth.html
+++ b/fifth.html
@@ -4,22 +4,22 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
    "http://www.w3.org/TR/html4/loose.dtd">
-<html lang = "en">
+<html lang="en">
    <head>
-      <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8">
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>ReactOS Community - 5th Testing Contest</title>
-      <link href = "StyleSheet.css" rel = "StyleSheet" type = "text/css">
+      <link href="StyleSheet.css" rel="StyleSheet" type="text/css">
    </head>
   
    <body>
-      <img src = "images/ROS.png" alt = "ReactOS Icon" align = "left" height = "120" width = "120" hspace = "10">
+      <img src="images/ROS.png" alt="ReactOS Icon" align="left" height="120" width="120" hspace="10">
       <h1>&nbsp;ReactOS Community</h1>
       <h2>&nbsp;5th Testing Contest</h2>
       <h4><i>&nbsp;7 tests in total made by 4 candidates</i></h4>
-      <h4>&nbsp;<a href = "index.html"><< Go Back</a></h4>
+      <h4>&nbsp;<a href="index.html">&lt;&lt; Go Back</a></h4>
 
       <!-- Add a separator -->
-      <hr style = "border-width: 3px">
+      <hr style="border-width: 3px">
 
       <h1>&nbsp;<u>Submissions</u></h1>
 
@@ -31,11 +31,11 @@
          <h3>&nbsp;&nbsp;<b>Post Date: 08/11/2018</b></h3>
 
          <br>
-         <img src = "images/fifth/AwardWinflash.jpg" alt = "Award WinFlash" height = "450" width = "450" hspace = "25">
+         <img src="images/fifth/AwardWinflash.jpg" alt="Award WinFlash" height="450" width="450" hspace="25">
          <br>
-         <img src = "images/fifth/mobo.jpg" alt = "Motherboard" height = "450" width = "450" hspace = "25">
+         <img src="images/fifth/mobo.jpg" alt="Motherboard" height="450" width="450" hspace="25">
          <br>
-         <iframe src = "https://www.youtube.com/embed/F3E_GWrCZXQ" width = "450" height = "315"></iframe>
+         <iframe src="https://www.youtube.com/embed/F3E_GWrCZXQ" width="450" height="315"></iframe>
          <br>
          <p>
             My first entry
@@ -58,11 +58,11 @@
          <p>
             Digital Works 3.0.5.0 under ReactOS 0.4.10, tested some circuits.
          </p>
-         <img src = "images/fifth/digitalworks.png" alt = "Digital Works" height = "470" width = "510" hspace = "25">
+         <img src="images/fifth/digitalworks.png" alt="Digital Works" height="470" width="510" hspace="25">
          <br>
-         <img src = "images/fifth/digitalworks2.png" alt = "Digital Works" height = "470" width = "510" hspace = "25">
+         <img src="images/fifth/digitalworks2.png" alt="Digital Works" height="470" width="510" hspace="25">
          <br>
-         <a href = "videos/fifth/digitalworks.mp4"><img src = "images/fifth/digitalworks-video.png" alt = "Digital Works Video" height = "470" width = "550" hspace = "25"></a>
+         <a href="videos/fifth/digitalworks.mp4"><img src="images/fifth/digitalworks-video.png" alt="Digital Works Video" height="470" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -78,7 +78,7 @@
          <p>
             Spore works on ReactOS 0.4.10. Sound doesn't work, game runs with 3D acceleration.
          </p>
-         <iframe src = "https://youtube.com/embed/mqP8M-au8qQ" width = "450" height = "315"></iframe>
+         <iframe src="https://youtube.com/embed/mqP8M-au8qQ" width="450" height="315"></iframe>
       </div>
 
       <!-- Add a separator -->
@@ -91,18 +91,18 @@
          <h3>&nbsp;&nbsp;<b>Post Date: 13/11/2018</b></h3>
 
          <br>
-         <img src = "images/fifth/tomGDI.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
+         <img src="images/fifth/tomGDI.png" alt="Tom2D GDI Benchmark" height="470" width="560" hspace="25">
          <br>
-         <img src = "images/fifth/tomGDI2.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
+         <img src="images/fifth/tomGDI2.png" alt="Tom2D GDI Benchmark" height="470" width="560" hspace="25">
          <br>
-         <img src = "images/fifth/tomGDI4.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
+         <img src="images/fifth/tomGDI4.png" alt="Tom2D GDI Benchmark" height="470" width="560" hspace="25">
          <br>
-         <img src = "images/fifth/tomGDI5.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
+         <img src="images/fifth/tomGDI5.png" alt="Tom2D GDI Benchmark" height="470" width="560" hspace="25">
          <br>
          <p>
             Tom2D GDI benchmark works in ReactOS 0.4.10, needs VB6 to run
          </p>
-         <img src = "images/fifth/tomGDI6.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
+         <img src="images/fifth/tomGDI6.png" alt="Tom2D GDI Benchmark" height="470" width="560" hspace="25">
       </div>
 
       <!-- Add a separator -->
@@ -118,7 +118,7 @@
          <p>
             WOW 1.12.1 working on Reactos 0.4.10
          </p>
-         <a href = "videos/fifth/wow.mp4"><img src = "images/fifth/wow-video.png" alt = "World of Warcraft Video" height = "470" width = "550" hspace = "25"></a>
+         <a href="videos/fifth/wow.mp4"><img src="images/fifth/wow-video.png" alt="World of Warcraft Video" height="470" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -134,7 +134,7 @@
          <p>
             Hi! So, I decided to test Office 2003 on ReactOS, even it was so buggy. Here it is:
          </p>
-         <iframe src = "https://www.youtube.com/embed/iC3-VSQV5GI" width = "450" height = "315"></iframe>
+         <iframe src="https://www.youtube.com/embed/iC3-VSQV5GI" width="450" height="315"></iframe>
       </div>
 
       <!-- Add a separator -->
@@ -150,7 +150,7 @@
          <p>
             This time I used vbox drivers instead of swiftshader. The result is much better. The mouse behaves weirdly tho.
          </p>
-         <a href = "videos/fifth/wow2.mp4"><img src = "images/fifth/wow-video2.png" alt = "World of Warcraft Video" height = "470" width = "550" hspace = "25"></a>
+         <a href="videos/fifth/wow2.mp4"><img src="images/fifth/wow-video2.png" alt="World of Warcraft Video" height="470" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -163,7 +163,7 @@
          <h3>&nbsp;&nbsp;<b>Post Date: 15/11/2018</b></h3>
 
          <br>
-         <img src = "images/fifth/QtSpim.png" alt = "QtSpim" height = "475" width = "700" hspace = "25">
+         <img src="images/fifth/QtSpim.png" alt="QtSpim" height="475" width="700" hspace="25">
          <p>
             QtSpim 9.1.9 works in ReactOS, can load MIPS asm files and run them flawlessly
          </p>
