--- a/fourth.html
+++ b/fourth.html
@@ -4,27 +4,27 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
    "http://www.w3.org/TR/html4/loose.dtd">
-<html lang = "en">
+<html lang="en">
    <head>
-      <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8">
+      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>ReactOS Community - 4th Testing Contest</title>
-      <link href = "StyleSheet.css" rel = "StyleSheet" type = "text/css">
+      <link href="StyleSheet.css" rel="StyleSheet" type="text/css">
    </head>
 
    <body>
-      <img src = "images/ROS.png" alt = "ReactOS Icon" align = "left" height = "120" width = "120" hspace = "10">
+      <img src="images/ROS.png" alt="ReactOS Icon" align="left" height="120" width="120" hspace="10">
       <h1>&nbsp;ReactOS Community</h1>
       <h2>&nbsp;4th Testing Contest</h2>
       <h4><i>&nbsp;16 tests in total made by 8 candidates</i></h4>
-      <h4>&nbsp;<a href = "index.html"><< Go Back</a></h4>
+      <h4>&nbsp;<a href="index.html">&lt;&lt; Go Back</a></h4>
 
       <!-- Add a separator -->
-      <hr style = "border-width: 3px">
+      <hr style="border-width: 3px">
 
       <h1>&nbsp;<u>Submissions</u></h1>
 
       <!-- Users' posts -->
-      <div id = "winner">
+      <div id="winner">
          <!-- Post details -->
          <h3>&nbsp;&nbsp;<b>Username: Zekken (Contest Winner)</b></h3>
          <h3>&nbsp;&nbsp;<b>User ID: 153597217956036608</b></h3>
@@ -36,11 +36,11 @@
             <br>
             Runs literally flawlessly (Just takes a while to load)
          </p>
-         <a href = "https://i.imgur.com/vtbJMmL.jpg"><img src = "https://i.imgur.com/vtbJMmL.jpg" alt = "Base Game" height = "300" width = "550" hspace = "25"></a>
+         <a href="https://i.imgur.com/vtbJMmL.jpg"><img src="https://i.imgur.com/vtbJMmL.jpg" alt="Base Game" height="300" width="550" hspace="25"></a>
          <br>
-         <a href = "https://i.imgur.com/wt5JnIl.jpg"><img src = "https://i.imgur.com/wt5JnIl.jpg" alt = "Reign of Giants DLC" height = "300" width = "550" hspace = "25"></a>
+         <a href="https://i.imgur.com/wt5JnIl.jpg"><img src="https://i.imgur.com/wt5JnIl.jpg" alt="Reign of Giants DLC" height="300" width="550" hspace="25"></a>
          <br>
-         <a href = "https://i.imgur.com/hEi1Gn8.jpg"><img src = "https://i.imgur.com/hEi1Gn8.jpg" alt = "Ship Wreck" height = "300" width = "550" hspace = "25"></a>
+         <a href="https://i.imgur.com/hEi1Gn8.jpg"><img src="https://i.imgur.com/hEi1Gn8.jpg" alt="Ship Wreck" height="300" width="550" hspace="25"></a>
 
          <!-- Add a separator -->
          <hr>
@@ -50,11 +50,11 @@
          <p>
             Retroarch
          </p>
-         <a href = "https://i.imgur.com/slrQx4I.png"><img src = "https://i.imgur.com/slrQx4I.png" alt = "Retroarch" height = "300" width = "550" hspace = "25"></a>
+         <a href="https://i.imgur.com/slrQx4I.png"><img src="https://i.imgur.com/slrQx4I.png" alt="Retroarch" height="300" width="550" hspace="25"></a>
          <br>
-         <a href = "images/fourth/retroarch-2.png"><img src = "images/fourth/retroarch-2.png" alt = "Retroarch" height = "300" width = "550" hspace = "25"></a>
+         <a href="images/fourth/retroarch-2.png"><img src="images/fourth/retroarch-2.png" alt="Retroarch" height="300" width="550" hspace="25"></a>
          <br>
-         <a href = "https://i.imgur.com/l9jEzUI.jpg"><img src = "https://i.imgur.com/l9jEzUI.jpg" alt = "Retroarch" height = "300" width = "550" hspace = "25"></a>
+         <a href="https://i.imgur.com/l9jEzUI.jpg"><img src="https://i.imgur.com/l9jEzUI.jpg" alt="Retroarch" height="300" width="550" hspace="25"></a>
 
          <!-- Add a separator -->
          <hr>
@@ -65,9 +65,9 @@
             Arduino IDE
             <br>
             I programmed my Arduino Mega to blink its LED through ROS and it worked</p>
-         <a href = "https://i.imgur.com/zTSXFkn.png"><img src = "https://i.imgur.com/zTSXFkn.png" alt = "Arduino IDE" height = "300" width = "550" hspace = "25"></a>
+         <a href="https://i.imgur.com/zTSXFkn.png"><img src="https://i.imgur.com/zTSXFkn.png" alt="Arduino IDE" height="300" width="550" hspace="25"></a>
          <br>
-         <iframe src = "https://youtube.com/embed/pDj5dUw11nc" width = "450" height = "315"></iframe>
+         <iframe src="https://youtube.com/embed/pDj5dUw11nc" width="450" height="315"></iframe>
       </div>
 
       <!-- Add a separator -->
@@ -83,9 +83,9 @@
          <p>
             WarCraft 3, runs flawless in terms of gameplay and can even enter multiplayer. Has a few workaroundable caveats.
          </p>
-         <a href = "images/fourth/warcraft3.png"><img src = "images/fourth/warcraft3.png" alt = "WarCraft 3" height = "350" width = "550" hspace = "25"></a>
+         <a href="images/fourth/warcraft3.png"><img src="images/fourth/warcraft3.png" alt="WarCraft 3" height="350" width="550" hspace="25"></a>
          <br>
-         <iframe src = "https://youtube.com/embed/irQODyct4eA" width = "450" height = "315"></iframe>
+         <iframe src="https://youtube.com/embed/irQODyct4eA" width="450" height="315"></iframe>
       </div>
 
       <!-- Add a separator -->
@@ -101,7 +101,7 @@
          <p>
             StarCraft, runs flawless, but needs ChaosLauncher workaround
          </p>
-         <iframe src = "https://youtube.com/embed/b4K933ZBxi0" width = "450" height = "315"></iframe>
+         <iframe src="https://youtube.com/embed/b4K933ZBxi0" width="450" height="315"></iframe>
       </div>
 
       <!-- Add a separator -->
@@ -117,7 +117,7 @@
          <p>
             Cheat Engine 6.8.1 works in ReactOS 0.4.9 (previously tested 6.7) All major functions (still) work So if a game runs on ReactOS, you sure can cheat ;)
          </p>
-         <a href = "images/fourth/roscontest-cheatengine6.8.1.png"><img src = "images/fourth/roscontest-cheatengine6.8.1.png" alt = "Cheat Engine" height = "470" width = "560" hspace = "25"></a>
+         <a href="images/fourth/roscontest-cheatengine6.8.1.png"><img src="images/fourth/roscontest-cheatengine6.8.1.png" alt="Cheat Engine" height="470" width="560" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -134,7 +134,7 @@
             <br>
             So you can make your ros games drm free.
          </p>
-         <a href = "images/fourth/roscontest-ollydbg2.png"><img src = "images/fourth/roscontest-ollydbg2.png" alt = "OllyDbg2" height = "470" width = "560" hspace = "25"></a>
+         <a href="images/fourth/roscontest-ollydbg2.png"><img src="images/fourth/roscontest-ollydbg2.png" alt="OllyDbg2" height="470" width="560" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -149,7 +149,7 @@
          <p>
             Windirstat
          </p>
-         <a href = "images/fourth/roscontest-windirsat.png"><img src = "images/fourth/roscontest-windirsat.png" alt = "Windirstat" height = "470" width = "560" hspace = "25"></a>
+         <a href="images/fourth/roscontest-windirsat.png"><img src="images/fourth/roscontest-windirsat.png" alt="Windirstat" height="470" width="560" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -165,7 +165,7 @@
          <p>
             KluDX, a tool to check DirectX 9, 10 and OpenGL capabilities on videocards, works on ReactOS 0.4.9
          </p>
-         <a href = "images/fourth/kludx.png"><img src = "images/fourth/kludx.png" alt = "KluDX" height = "470" width = "550" hspace = "25"></a>
+         <a href="images/fourth/kludx.png"><img src="images/fourth/kludx.png" alt="KluDX" height="470" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -181,9 +181,9 @@
          <p>
             Telegram 1.3.10 works, with some minor hangs and glitches which can be mostly resolved by either moving the window or minimizing it.
          </p>
-         <a href = "images/fourth/telegram1.png"><img src = "images/fourth/telegram1.png" alt = "Telegram" height = "470" width = "550" hspace = "25"></a>
+         <a href="images/fourth/telegram1.png"><img src="images/fourth/telegram1.png" alt="Telegram" height="470" width="550" hspace="25"></a>
          <br>
-         <a href = "images/fourth/telegram2.png"><img src = "images/fourth/telegram2.png" alt = "Telegram" height = "470" width = "550" hspace = "25"></a>
+         <a href="images/fourth/telegram2.png"><img src="images/fourth/telegram2.png" alt="Telegram" height="470" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -199,7 +199,7 @@
          <p>
             X-BIOS Editor works on ROS, old BIOS modding tool for older nvidia cards. Works flawlessly.
          </p>
-         <a href = "images/fourth/xbios.png"><img src = "images/fourth/xbios.png" alt = "X-BIOS Editor" height = "470" width = "550" hspace = "25"></a>
+         <a href="images/fourth/xbios.png"><img src="images/fourth/xbios.png" alt="X-BIOS Editor" height="470" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -215,7 +215,7 @@
          <p>
             WinRAR, the absolute latest one, works like a champ on ReactOS. It works as well as 7zip.
          </p>
-         <a href = "images/fourth/winrar.png"><img src = "images/fourth/winrar.png" alt = "WinRAR" height = "470" width = "550" hspace = "25"></a>
+         <a href="images/fourth/winrar.png"><img src="images/fourth/winrar.png" alt="WinRAR" height="470" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -231,7 +231,7 @@
          <p>
             Plants VS Zombies - PC edition. Works perfectly,even with the 3D acceleration in the settings of the game. Lags quite a bit because VM, but no glitches at all. Just slow (15 FPS as Fraps says in general)
          </p>
-         <a href = "images/fourth/plantvszombies.png"><img src = "images/fourth/plantvszombies.png" alt = "Plants VS Zombies" height = "470" width = "550" hspace = "25"></a>
+         <a href="images/fourth/plantvszombies.png"><img src="images/fourth/plantvszombies.png" alt="Plants VS Zombies" height="470" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -247,7 +247,7 @@
          <p>
             Far Cry 1 running with 3D acceleration, with a minor graphical glitch after exiting the building. There is no sound and the game has the same mouse bug as DOOM 3.
          </p>
-         <iframe src = "https://youtube.com/embed/OYraUZObp0E" width = "450" height = "315"></iframe>
+         <iframe src="https://youtube.com/embed/OYraUZObp0E" width="450" height="315"></iframe>
       </div>
 
       <!-- Add a separator -->
@@ -263,9 +263,9 @@
          <p>
             Dragon's Dogma Dark Arisen on ROS (with SwiftShader)
          </p>
-         <a href = "images/fourth/dogma-dark1.png"><img src = "images/fourth/dogma-dark1.png" alt = "Dragon's Dogma Dark Arisen" height = "470" width = "550" hspace = "25"></a>
+         <a href="images/fourth/dogma-dark1.png"><img src="images/fourth/dogma-dark1.png" alt="Dragon's Dogma Dark Arisen" height="470" width="550" hspace="25"></a>
          <br>
-         <a href = "images/fourth/dogma-dark2.png"><img src = "images/fourth/dogma-dark2.png" alt = "Dragon's Dogma Dark Arisen" height = "470" width = "550" hspace = "25"></a>
+         <a href="images/fourth/dogma-dark2.png"><img src="images/fourth/dogma-dark2.png" alt="Dragon's Dogma Dark Arisen" height="470" width="550" hspace="25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -281,7 +281,7 @@
          <p>
             Rayman 2 Demo
          </p>
-         <iframe src = "https://youtube.com/embed/h2ROoTHKorI" width = "450" height = "315"></iframe>
+         <iframe src="https://youtube.com/embed/h2ROoTHKorI" width="450" height="315"></iframe>
       </div>
 
       <!-- Add a separator -->
